Fixed spec.
