# app/Http/Resources/ProductResource.php
@@ -14,14 +14,22 @@ class ProductResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return [
+        $template = [
             'id' => $this->id,
             'name' => $this->name,
             'description' => $this->description,
             'price' => $this->price,
             'main_image' => $this->main_image,
+            'category' => [],
             'created_at' => $this->created_at->format('Y-m-d H:i:s'),
             'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
         ];
+
+        if(!is_null($this->category)){
+            $template['category']['id'] = $this->category->id;
+            $template['category']['name'] = $this->category->name;
+        }
+
+        return $template;
     }
 }
