# routes/api.php
@@ -14,13 +14,13 @@ Route::group(['middleware' => 'auth.jwt'], function () {
 
     Route::get('categories', [CategoryController::class, 'getAll']);
     Route::get('categories/{id}', [CategoryController::class, 'show']);
-    Route::post('categories', [CategoryController::class, 'create']);
+    Route::post('categories/create', [CategoryController::class, 'create']);
     Route::put('categories/{id}', [CategoryController::class, 'update']);
     Route::delete('categories/{id}', [CategoryController::class, 'delete']);
 
     Route::get('products', [ProductController::class, 'getAll']);
     Route::get('products/{id}', [ProductController::class, 'show']);
-    Route::post('products', [ProductController::class, 'create']);
+    Route::post('products/create', [ProductController::class, 'create']);
     Route::delete('products/{id}', [ProductController::class, 'delete']);
     Route::post('products/{id}', [ProductController::class, 'update']);
 });
